client/src/alumni.css
.jAlumni {
    background-image: url("../src/images/campus1.jpg");
    background-size: cover;
    background-position: center;
    height: 360px;
  }

.h1Alum {
  color: #00274c;
  font-size: 45px;
  font-weight: 600;
}

.h2Alum {
  color: #3b84dc;
}

.h4Alum {
  color: #797d78;
  font-size: 20px;
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.pAlum {
  color: black;
}

.dAlum{
  color: #797d78;
  font-weight: 600;
}

.iAlum {
  color: #3b84dc;
}

.cardAlum {
  background-color: #cfcfcf;
  box-shadow: 10px 10px 5px grey;
}

.containerDonor {
  position: relative;
  width: 600px;
  height: 400px;
}

